<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignupActivity">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="@dimen/et_width"
        android:layout_height="@dimen/et_height"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/et_width"
        android:layout_height="@dimen/et_height"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password"/>

    <TextView
        android:id="@+id/tv_password_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_password_confirm"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="@id/et_password_confirmation"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <EditText
        android:id="@+id/et_password_confirmation"
        android:layout_width="@dimen/et_width"
        android:layout_height="@dimen/et_height"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password_confirmation"/>

</androidx.constraintlayout.widget.ConstraintLayout>
